5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1756_672.log
== TEST (2019-05-20 18:58:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

N = int(input("digite N: ")

v1 = ones(N, dtype=int)
-- ERROR:
File "XXXX", line 6
    v1 = ones(N, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:00:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

N = int(input("digite N: ")

v1 = ones(N, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 6
    v1 = ones(N, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:02:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

N = int(input("digite N: ")
v1 = ones(4, dtype=int)

print(v1)
-- ERROR:
File "XXXX", line 5
    v1 = ones(4, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:02:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

N = int(input("digite N: ")
v1 = ones(N, dtype=int)

print(v1)
-- ERROR:
File "XXXX", line 5
    v1 = ones(N, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:03:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

N = array(aval(input("digite N: "))
v1 = ones(N, dtype=int)

print(v1)
-- ERROR:
File "XXXX", line 5
    v1 = ones(N, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 21:22:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

N = array(eval(input("digite N: "))
v1 = ones(N, dtype=int)

print(v1)
-- ERROR:
File "XXXX", line 5
    v1 = ones(N, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 21:23:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

N = array(eval(input("digite N: ")))
v1 = ones(N, dtype=int)

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 21:23:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

N = array(eval(input("digite N: ")))
v1 = ones(N, dtype=int)

print(v1)
-- EXECUTION TIME:
0.323191
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
